Code refactoring №2